fix: correção dos z-index

--- a/src/components/ui/toast/Toast.scss
+++ b/src/components/ui/toast/Toast.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/mixins.scss';
+
 .ui-toast {
 	color: var(--s-color-content-on-color);
 	padding: var(--s-spacing-x-small);
@@ -45,6 +47,16 @@
 		align-items: center;
 		justify-content: center;
 		text-align: center;
+	}
+
+	@include darkmode {
+		.ui-toast {
+			&.-variant {
+				&-default {
+					background-color: var(--s-color-fill-dark);
+				}
+			}
+		}
 	}
 }
 
